--- a/user-accounts-cxf/pom.xml
+++ b/user-accounts-cxf/pom.xml
@@ -8,9 +8,9 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>id.aliirawan</groupId>
-  <artifactId>user-profile-cxf</artifactId>
+  <artifactId>user-accounts-cxf</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>user-profile-cxf</name>
+  <name>user-accounts-cxf</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
