set profile-api packaging type to bundle

--- a/profile-api/pom.xml
+++ b/profile-api/pom.xml
@@ -7,17 +7,7 @@
     <artifactId>microservices-example</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <groupId>id.aliirawan</groupId>
   <artifactId>profile-api</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <name>profile-api</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <packaging>bundle</packaging>
 </project>
