fix Dockerfile and README

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,6 +2,7 @@ FROM java:8-jdk
 MAINTAINER "Ali Irawan" <boylevantz@gmail.comp>
 ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
 ENV KARAF_VERSION=4.2.6
+
 RUN wget https://www-us.apache.org/dist/karaf/${KARAF_VERSION}/apache-karaf-${KARAF_VERSION}.tar.gz; \
     mkdir /opt/karaf; \
     tar --strip-components=1 -C /opt/karaf -xzf apache-karaf-${KARAF_VERSION}.tar.gz; \
@@ -9,5 +10,5 @@ RUN wget https://www-us.apache.org/dist/karaf/${KARAF_VERSION}/apache-karaf-${KA
     mkdir /deploy; \
     sed -i 's/^\(felix\.fileinstall\.dir\s*=\s*\).*$/\1\/deploy/' /opt/karaf/etc/org.apache.felix.fileinstall-deploy.cfg
 VOLUME ["/deploy"]
-EXPOSE 1099 8101 8181 44444
+EXPOSE 1099 8101 44444
 ENTRYPOINT ["/opt/karaf/bin/karaf"]
