trying using karaf 4.1.x

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,16 +1,16 @@
 FROM java:8-jdk
 MAINTAINER "Ali Irawan" <boylevantz@gmail.comp>
 ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
-ENV KARAF_VERSION=4.2.6
+ENV KARAF_VERSION=4.1.6
 
-# Version 4.0.8 is in archive
+# Version 4.0.8 or 4.1.6 is in archive
 # Check here https://karaf.apache.org/download.html
 
 # For active distributions
-ENV KARAF_URL=https://www-us.apache.org
+# ENV KARAF_URL=https://www-us.apache.org
 
 # For archived distributions
-# ENV KARAF_URL=http://archive.apache.org
+ENV KARAF_URL=http://archive.apache.org
 
 
 RUN wget ${KARAF_URL}/dist/karaf/${KARAF_VERSION}/apache-karaf-${KARAF_VERSION}.tar.gz; \
